someFixes: fixed most of the endpoints